force-app/main/default/objects/Transport_Exhibit__c/Transport_Exhibit__c.object-meta.xml
<CustomObject>
    <label>Transport Exhibit</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Transport Exhibit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transport Exhibits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>