force-app/main/default/objects/Transport_Exhibit__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transport Exhibits</relationshipLabel>
    <relationshipName>Transport_Exhibits</relationshipName>
    <type>Lookup</type>
</CustomField>