force-app/main/default/objects/Transport_Exhibit__c/fields/CESContract__c.field-meta.xml
<CustomField>
    <fullName>CESContract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CES Contract</label>
    <referenceTo>CESContract__c</referenceTo>
    <relationshipLabel>Transport Exhibits</relationshipLabel>
    <relationshipName>Transport_Exhibits</relationshipName>
    <type>Lookup</type>
</CustomField>