force-app/main/default/objects/Transport_Exhibit__c/fields/Corporate_Address__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Address__c</fullName>
    <formula>Account__r.BillingStreet</formula>
    <label>Corporate Address</label>
    <type>Text</type>
</CustomField>