force-app/main/default/objects/Transport_Exhibit__c/fields/Corporate_City__c.field-meta.xml
<CustomField>
    <fullName>Corporate_City__c</fullName>
    <formula>Account__r.BillingCity</formula>
    <label>Corporate City</label>
    <type>Text</type>
</CustomField>