force-app/main/default/objects/Transport_Exhibit__c/fields/Corporate_City_St_Zip__c.field-meta.xml
<CustomField>
    <fullName>Corporate_City_St_Zip__c</fullName>
    <formula>Account__r.BillingCity + &#39;, &#39; +  Account__r.BillingState + &#39; &#39; +  Account__r.BillingPostalCode</formula>
    <label>Corporate City St Zip</label>
    <type>Text</type>
</CustomField>