force-app/main/default/objects/Transport_Exhibit__c/fields/Corporate_State__c.field-meta.xml
<CustomField>
    <fullName>Corporate_State__c</fullName>
    <formula>Account__r.BillingState</formula>
    <label>Corporate State</label>
    <type>Text</type>
</CustomField>