force-app/main/default/objects/Transport_Exhibit__c/fields/Corporate_Zip__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Zip__c</fullName>
    <formula>Account__r.BillingPostalCode</formula>
    <label>Corporate Zip</label>
    <type>Text</type>
</CustomField>