force-app/main/default/objects/Transport_Exhibit__c/fields/File_Save_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Save_Name__c</fullName>
    <label>File Save Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>