force-app/main/default/objects/Transport_Exhibit__c/fields/LDC_Rate_Class__c.field-meta.xml
<CustomField>
    <fullName>LDC_Rate_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LDC Rate Class</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>LDC_Rate_Class__c.LDC__r.Utility_Code__c</field>
            <operation>equals</operation>
            <value>CNP-TX</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>LDC_Rate_Class__c</referenceTo>
    <relationshipLabel>Transport Exhibits</relationshipLabel>
    <relationshipName>Transport_Exhibits</relationshipName>
    <type>Lookup</type>
</CustomField>