force-app/main/default/objects/Transport_Exhibit__c/fields/Operations_Contact__c.field-meta.xml
<CustomField>
    <fullName>Operations_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operations Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Contact.Account.Id</valueField>
        </filterItems>
        <infoMessage>If your contact is a Contact Role, remove the filter and search again.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Transport Exhibits</relationshipLabel>
    <relationshipName>Transport_Exhibits</relationshipName>
    <type>Lookup</type>
</CustomField>