force-app/main/default/objects/Transport_Exhibit__c/fields/Operations_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Operations_Contact_Email__c</fullName>
    <formula>Operations_Contact__r.Email</formula>
    <label>Operations Contact Email</label>
    <type>Text</type>
</CustomField>