force-app/main/default/objects/Transport_Exhibit__c/fields/Operations_Contact_Fax__c.field-meta.xml
<CustomField>
    <fullName>Operations_Contact_Fax__c</fullName>
    <formula>Operations_Contact__r.Fax</formula>
    <label>Operations Contact Fax</label>
    <type>Text</type>
</CustomField>