force-app/main/default/objects/Transport_Exhibit__c/fields/Operations_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Operations_Contact_Phone__c</fullName>
    <formula>Operations_Contact__r.Phone</formula>
    <label>Operations Contact Phone</label>
    <type>Text</type>
</CustomField>