force-app/main/default/objects/Transport_Exhibit__c/fields/Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Pipeline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pipeline</label>
    <referenceTo>Pipeline__c</referenceTo>
    <relationshipLabel>Transport Exhibits</relationshipLabel>
    <relationshipName>Transport_Exhibits</relationshipName>
    <type>Lookup</type>
</CustomField>