force-app/main/default/objects/Transport_Exhibit__c/fields/Pipeline_Region__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Region__c</fullName>
    <label>Pipeline Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Conroe</fullName>
            </value>
            <value>
                <fullName>Woodlands 1</fullName>
            </value>
            <value>
                <fullName>Woodlands 2</fullName>
            </value>
            <value>
                <fullName>Beaumont</fullName>
            </value>
            <value>
                <fullName>South Texas</fullName>
            </value>
            <value>
                <fullName>Houston</fullName>
            </value>
            <value>
                <fullName>Texas Coast</fullName>
            </value>
            <value>
                <fullName>ETC</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>GSPL - TX</fullName>
            </value>
            <value>
                <fullName>Enbridge</fullName>
            </value>
            <value>
                <fullName>Kinder - Tejas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>