force-app/main/default/objects/Transport_Exhibit__c/fields/Receipt_Point__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Point__c</fullName>
    <label>Receipt Point</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Pipeline_Region__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>2433</fullName>
            </value>
            <value>
                <fullName>2515</fullName>
            </value>
            <value>
                <fullName>2568</fullName>
            </value>
            <value>
                <fullName>2594</fullName>
            </value>
            <value>
                <fullName>2595</fullName>
            </value>
            <value>
                <fullName>2955</fullName>
            </value>
            <value>
                <fullName>3004</fullName>
            </value>
            <value>
                <fullName>6612</fullName>
            </value>
            <value>
                <fullName>6613</fullName>
            </value>
            <value>
                <fullName>6617</fullName>
            </value>
            <value>
                <fullName>6618</fullName>
            </value>
            <value>
                <fullName>6621</fullName>
            </value>
            <value>
                <fullName>6622</fullName>
            </value>
            <value>
                <fullName>6623</fullName>
            </value>
            <value>
                <fullName>6624</fullName>
            </value>
            <value>
                <fullName>6625</fullName>
            </value>
            <value>
                <fullName>6626</fullName>
            </value>
            <value>
                <fullName>6627</fullName>
            </value>
            <value>
                <fullName>6628</fullName>
            </value>
            <value>
                <fullName>6629</fullName>
            </value>
            <value>
                <fullName>6631</fullName>
            </value>
            <value>
                <fullName>6638</fullName>
            </value>
            <value>
                <fullName>6639</fullName>
            </value>
            <value>
                <fullName>6641</fullName>
            </value>
            <value>
                <fullName>6642</fullName>
            </value>
            <value>
                <fullName>6646</fullName>
            </value>
            <value>
                <fullName>8389</fullName>
            </value>
            <value>
                <fullName>11467</fullName>
            </value>
            <value>
                <fullName>13460</fullName>
            </value>
            <value>
                <fullName>15344</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>