force-app/main/default/objects/Transport_Exhibit__c/fields/Shipper_Cashout_Index_Adder__c.field-meta.xml
<CustomField>
    <fullName>Shipper_Cashout_Index_Adder__c</fullName>
    <formula>CASE( TEXT( Pipeline_Region__c )
  , &#39;Houston&#39;, 2.55
  , &#39;Beaumont&#39;, 2.85
  , &#39;Conroe&#39;, 1.20
  , &#39;Texas Coast&#39;, 2.15
  , &#39;South Texas&#39;, 1.30
  , &#39;East Texas&#39;, 1.30
  , &#39;Tyler&#39;, 0.8
  , null)</formula>
    <label>Shipper Cashout Index Adder</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>